tidyng up the code of index and fitnessch. work in progress..

--- a/FitnessChallenge.html
+++ b/FitnessChallenge.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
+
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="HOMMY">
@@ -10,38 +11,34 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/mystyle.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
 
-    <meta charset="utf-8">
-    <title>Hommytest</title>
-  </head>
-  <body>
-
-    <div class="prova" id="sfondo">
-      <img class="bar" src="Imgs/status.png" alt="Sensitive">
-      <img class="bar2" src="Imgs/setting.png" alt="Sensitive">
-      <img class="bar3" src="Imgs/users.png" alt="Sensitive">
-      <img class="player" src="Imgs/Gianluca.jpeg" alt="Sensitive">
-        <p class="playername">"Nome player"</p>
-
-
-
-
-      <div class="row">
-          <div class="col-md-3">
-            <img class="rounded main__examples__image" src="Imgs/Pulse.png" alt="Sensitive">
-          </div>
-          <div class="col-md-9">
-            <h2>Fitness Challenge</h2>
-            <p class="lead">text from HOMMY here (java)</p>
-          </div>
-        </div>
-    </div>
-
+  <title>Fitness Challenge</title>
+</head>
+<body>
+  </div>
+  <div class="challenge_room">
     <h1 class="name">HOMMY</h1>
-
-  </body>
-
+    <img src="logos/hommy logo.png" alt="biglogo" id="biglogo">
+    <div class="row challenge_room_form">
+      <div class="col-md-4">
+          <img src="Imgs/Pulse.png" alt="pulse" id="pulse">
+      </div>
+      <div class="col-md-7 central_field", "wlup">
+        <h2>FITNESS CHALLENGE</h2>
+          <ul>
+              <img src="Imgs/rate.gif" alt="rate" id="rate">
+              <!-- qui script gioco -->
+          </ul>
+      </div>
+      <div class="col-md-1 settings">
+        <img src="Imgs/setting.png" alt="">
+        <img src="Imgs/status.png" alt="">
+        <img src="Imgs/users.png" alt="">
+      </div>
+    </div>
+  </div>
+</body>
 
 </html>
