--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
+
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="HOMMY">
@@ -10,36 +11,37 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/mystyle.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
 
-    <meta charset="utf-8">
-    <title>Hommytest</title>
-  </head>
-  <body>
-
-    <div class="prova" id="sfondo">
-      <img class="bar" src="Imgs/status.png" alt="Sensitive">
-      <img class="bar2" src="Imgs/setting.png" alt="Sensitive">
-      <img class="bar3" src="Imgs/users.png" alt="Sensitive">
-
-
-
-
-      <div class="row">
-          <div class="col-md-3">
-            <img class="rounded main__examples__image" src="Imgs/wifi.png" alt="Sensitive" height="300px">
-          </div>
-          <div class="col-md-9">
-            <h2>(Wi-Fi) Waiting for players...</h2>
-            <p class="lead">linked players list (java)</p>
-          </div>
-        </div>
+  <title>Waiting Room</title>
+</head>
+<body>
+  </div>
+  <div class="waiting_room">
+    <h1>Hi! I'm <img src="logos/hommy logo.png" alt="logo" id="logo">O M M Y and i will be your game master!</h1>
+    <div class="row waiting_room_form">
+      <div class="col-md-4">
+          <img src="Imgs/wifi.png" alt="wifi" id="wifi">
+      </div>
+      <div class="col-md-7 central_field", "wlup">
+          <h2>Press <span id="join">Join Match</span> on your app to see your name below:</h2>
+          <ul>
+            <div class="list">
+              <li class="lead">Enzham<img src="Imgs/crown.png" alt="admin" id="admin"></li>
+              <li class="lead">Syrien</li>
+              <li class="lead">Giangio</li>
+              <img src="Imgs/buffering.gif" alt="buffering" id="buffering">
+            </div>
+          </ul>
+      </div>
+      <div class="col-md-1 settings">
+        <img src="Imgs/setting.png" alt="">
+        <img src="Imgs/status.png" alt="">
+        <img src="Imgs/users.png" alt="">
+      </div>
     </div>
-
-    <h1 class="name">HOMMY</h1>
-
-  </body>
-
+  </div>
+</body>
 
 </html>
