Fixed errors; Modified layout.

--- a/FitnessChallenge.html
+++ b/FitnessChallenge.html
@@ -25,18 +25,21 @@
       <div class="col-md-4">
           <img src="Imgs/Pulse.png" alt="pulse" id="pulse">
       </div>
-      <div class="col-md-7 central_field", "wlup">
-        <h2>FITNESS CHALLENGE</h2>
+      <div class="col-md-7 central_fieldch">
+        <h2>Fitness Challenge</h2>
           <ul>
-              <img src="Imgs/rate.gif" alt="rate" id="rate">
+              <img src="Imgs/heartbeat.gif" alt="rate" id="rate">
               <!-- qui script gioco -->
           </ul>
       </div>
-      <div class="col-md-1 settings">
+    <!--
+       Attivabili in seguito se vogliamo
+            <div class="col-md-1 settings">
         <img src="Imgs/setting.png" alt="">
         <img src="Imgs/status.png" alt="">
         <img src="Imgs/users.png" alt="">
       </div>
+    -->
     </div>
   </div>
 </body>
