--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-md-4">
           <img src="Imgs/wifi.png" alt="wifi" id="wifi">
       </div>
-      <div class="col-md-7 central_field", "wlup">
+      <div class="col-md-7 central_field">
           <h2>Press <span id="join">Join Match</span> on your app to see your name below:</h2>
           <ul>
             <div class="list">
@@ -36,9 +36,7 @@
           </ul>
       </div>
       <div class="col-md-1 settings">
-        <img src="Imgs/setting.png" alt="">
         <img src="Imgs/status.png" alt="">
-        <img src="Imgs/users.png" alt="">
       </div>
     </div>
   </div>
